--- a/testing/Base.lproj/Main.storyboard
+++ b/testing/Base.lproj/Main.storyboard
@@ -53,6 +53,18 @@
                                     <action selector="menuButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="tyP-p4-GJi"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fJi-QY-FVQ">
+                                <rect key="frame" x="0.0" y="20" width="223" height="82"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.48145195617094949" green="1" blue="0.9354487362659909" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <fontDescription key="fontDescription" name="MyanmarSangamMN-Bold" family="Myanmar Sangam MN" pointSize="30"/>
+                                <state key="normal" title="Web Browser">
+                                    <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="webPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="W17-ic-jBv"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <gestureRecognizers/>
@@ -60,6 +72,7 @@
                     </view>
                     <connections>
                         <outlet property="menuButton" destination="Cqk-MT-Spc" id="Hop-QR-mxm"/>
+                        <outlet property="webButton" destination="fJi-QY-FVQ" id="S1D-6T-Zmg"/>
                         <outlet property="webViewTest" destination="W6W-t1-EU9" id="pJI-KZ-Rn8"/>
                         <segue destination="zH7-w1-LQj" kind="show" identifier="vcToMenu" id="z14-VN-9nl"/>
                     </connections>
